[package]
name = "vason"
version = "0.0.1"
edition = "2021"
authors = ["vismate"]
license = "MIT OR Apache-2.0"
description = "Basic 2D rasterizer written in rust that renders to a buffer."
homepage =  "https://github.com/vismate/vason/"
repository =  "https://github.com/vismate/vason/"
rust-version = "1.58.1"
keywords = ["graphics", "rasterizing", "framebuffer", "rendering", "drawing"]
categories = ["graphics"]

[dependencies]

[dev-dependencies]
minifb = "0.23.0"